feat(definition): improve test coverage